# rusty_webserver

./: .gitignore  CIRCUIT_BREAKER_COMPLETE.md  Cargo.toml  DEPLOYMENT.md  LOG_READABILITY_COMPARISON.md  MEMORY_SAFETY_ANALYSIS.md  README.md  SSL_PHASE_6_1_COMPLETE.md  SSL_TLS_IMPLEMENTATION_COMPLETE.md  SUBDOMAIN_MANAGEMENT_COMPLETE.md  TUNNEL_PHASE_7_1_COMPLETE.md  TUNNEL_PHASE_7_1_COMPREHENSIVE_COMPLETE.md  TUNNEL_PHASE_7_1_TESTING_COMPLETE.md  TUNNEL_PHASE_7_3_COMPLETE.md  TUNNEL_PORT_CONFIG_COMPLETE.md  WEBSOCKET_IMPLEMENTATION.md  app_config.toml  b_linux.sh  b_linux_from_win.bat  b_mac.sh  b_win.bat  build.bat  build.sh  c_linux.sh  c_mac.sh  c_win.bat  config.example.toml  config.legacy.toml  config.loadbalancer.toml  config.minimal.toml  config.no-ssl.toml  config.proxy.toml  config.simple.toml  config.test.toml  config.tunnel-auth-demo.toml  config.tunnel-client-prod.toml  config.tunnel-port-test.toml  config.tunnel-server-prod.toml  config.tunnel-server.toml  config.tunnel-test.toml  (+18 more)
docs/: ENHANCED_LOGGING_COMPLETE.md  SSL_CONFIG_VERIFICATION_COMPLETE.md  SSL_TEST_CONSOLIDATION_COMPLETE.md  TUNNEL_PHASES_7_1_AND_7_2_COMPLETE.md  TUNNEL_PHASE_7_2_COMPLETE.md  TUNNEL_PHASE_7_3_AUTH_COMPLETE.md  WEBSOCKET_IMPLEMENTATION_COMPLETE.md
example_configs/: config.invalid.toml  config.ssl.toml  config.tunnel-phase7.2.toml  config.tunnel-server-prod.toml  config.tunnel.toml  config.validation.toml
httpserver/: Cargo.toml
httpserver-balancer/: Cargo.toml
httpserver-balancer/src/: lib.rs
httpserver-balancer/tests/: circuit_breaker.rs  circuit_breaker_demo.rs  connection_tracking.rs  health_endpoints.rs  load_balancing_strategies.rs  target_management.rs  utilities.rs
httpserver-cli/: Cargo.toml
httpserver-cli/src/: main.rs
httpserver-config/: Cargo.toml
httpserver-config/src/: lib.rs
httpserver-config/tests/: config_parsing.rs  health_endpoints.rs
httpserver-core/: Cargo.toml
httpserver-core/src/: lib.rs  logging.rs  ssl.rs
httpserver-core/tests/: logging_tests.rs  middleware_tests.rs  server_functionality.rs  ssl_tests.rs
httpserver-engine/: Cargo.toml
httpserver-engine/src/: lib.rs
httpserver-proxy/: Cargo.toml
httpserver-proxy/src/: health_integration.rs  http_health.rs  lib.rs  middleware.rs  websocket_health.rs
httpserver-proxy/tests/: health_check_integration.rs  middleware_tests.rs  proxy_handler.rs  rate_limiting_tests.rs  route_matching.rs  sticky_session_integration.rs  websocket_advanced.rs  websocket_e2e.rs  websocket_sticky_sessions.rs  websocket_support.rs  websocket_test_server.rs
httpserver-static/: Cargo.toml
httpserver-static/src/: lib.rs
httpserver-static/tests/: file_serving_tests.rs  static_handler_tests.rs
httpserver-tests/: Cargo.toml
httpserver-tests/src/: main.rs
httpserver-tests/src/balancer_tests/: circuit_breaker.rs  circuit_breaker_demo.rs  health_endpoints.rs  mod.rs  target_management.rs  utilities.rs
httpserver-tests/src/config_tests/: config_parsing.rs  health_endpoints.rs  mod.rs  ssl_config_tests.rs
httpserver-tests/src/core_tests/: https_integration.rs  logging_tests.rs  middleware_tests.rs  mod.rs  server_functionality.rs  ssl_tests.rs
httpserver-tests/src/proxy_tests/: health_check_integration.rs  mod.rs  rate_limiting_tests.rs  route_matching.rs  websocket_advanced.rs  websocket_e2e.rs  websocket_support.rs  websocket_test_server.rs
httpserver-tests/src/static_tests/: file_serving_tests.rs  mod.rs  static_handler_tests.rs
httpserver-tests/src/tunnel_tests/: connection_tests.rs  mod.rs  subdomain_integration.rs
httpserver-tests/tunnel_data/: subdomains.json
httpserver-tunnel/: Cargo.toml
httpserver-tunnel/examples/: tunnel_client.rs
httpserver-tunnel/src/: auth.rs  client.rs  config.rs  connection.rs  lib.rs  protocol.rs  server.rs  status.rs  subdomain.rs
httpserver-tunnel/tests/: auth_tests.rs  config_integration.rs  configuration_tests.rs  integration_tests.rs  server_tests.rs  status_tests.rs  subdomain_integration.rs  tunnel_http_forwarding.rs
httpserver-tunnel/tunnel_data/: subdomains.json
httpserver/src/: main.rs
src/: main.rs
