[workspace]
members = [
    "httpserver",           # Main binary crate
    "httpserver-core",      # Core server functionality
    "httpserver-static",    # Static file serving
    "httpserver-proxy",     # Reverse proxy (future)
    "httpserver-balancer",  # Load balancing (future)
    "httpserver-config",    # Configuration parsing
]

resolver = "2"

# Shared dependencies for all workspace members
[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Future dependencies for Phase 2+
reqwest = { version = "0.11", features = ["json", "stream"] }
toml = "0.8"

# Phase 3.4 - WebSocket Support
axum-tungstenite = "0.3"
tokio-tungstenite = "0.20"
tungstenite = "0.20"

# Safer release profile for macOS app bundles
# Avoids aggressive optimizations that can cause crashes with WebView/FFI
[profile.release]
opt-level = 3          # Standard optimization (not "z" which can break FFI)
lto = "thin"           # Thin LTO instead of full LTO (safer with dynamic libraries)
codegen-units = 16     # Allow more units for better compatibility
panic = "unwind"       # Keep unwind for better error handling in GUI apps
strip = false          # Don't strip symbols (can cause issues with debugging)
debug = false          # No debug info in release
overflow-checks = false # Standard release setting