[package]
name = "httpserver-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { workspace = true }

[lib]
name = "httpserver_balancer"
path = "src/lib.rs"
