[package]
name = "httpserver-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
clap = { workspace = true }
httpserver-balancer = { path = "../httpserver-balancer" }
axum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Future dependencies for Phase 2+
toml = { workspace = true }

# Phase 6.1 - SSL/TLS Support  
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "httpserver_config"
path = "src/lib.rs"
