[package]
name = "httpserver-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "1.0", features = ["full"] }

[lib]
name = "httpserver_core"
path = "src/lib.rs"
