[package]
name = "httpserver-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
httpserver-config = { path = "../httpserver-config" }
httpserver-balancer = { path = "../httpserver-balancer" }
reqwest = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum-tungstenite = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
futures-util = { workspace = true }

[lib]
name = "httpserver_proxy"
path = "src/lib.rs"
