[package]
name = "httpserver-static"
version = "0.1.0"
edition = "2021"

[dependencies]
httpserver-core = { path = "../httpserver-core" }
axum = { workspace = true }
tokio = { workspace = true }
mime_guess = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.8"
hyper = { version = "1.0", features = ["full"] }
tower = { workspace = true }

[lib]
name = "httpserver_static"
path = "src/lib.rs"
