[package]
name = "httpserver-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "httpserver-tests"
path = "src/main.rs"

[dependencies]
# Test framework
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"

# HTTP testing
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
serde_json = "1.0"
reqwest = "0.11"

# WebSocket support
axum-tungstenite = "0.3"
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"

# Test utilities
uuid = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rcgen = "0.12"
base64 = "0.21"
chrono = "0.4"
tokio-util = "0.7"

# Local dependencies
httpserver-config = { path = "../httpserver-config" }
httpserver-balancer = { path = "../httpserver-balancer" }
httpserver-core = { path = "../httpserver-core" }
httpserver-proxy = { path = "../httpserver-proxy" }
httpserver-static = { path = "../httpserver-static" }
httpserver-tunnel = { path = "../httpserver-tunnel" }
