[package]
name = "httpserver-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies - shared across all crates
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

# WebSocket dependencies - reusing existing workspace deps
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tungstenite = { workspace = true }
futures-util = { workspace = true }

# SSL/TLS dependencies - reusing existing workspace deps  
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }

# HTTP client for tunnel server communication
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }

# URL parsing for tunnel endpoints
url = "2.4"

# Additional dependencies for tunnel client example
axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }

# HTTP client for forwarding requests
hyper = { workspace = true, features = ["full"] }
http = "1.0"

# Random number generation for subdomain generation
rand = "0.8"

# JWT token handling for advanced authentication
jsonwebtoken = "9.2"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
# Test dependencies
tempfile = "3.8"
mockall = "0.12"
# Testing framework
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "tunnel_client"
path = "examples/tunnel_client.rs"
